@@ -1,3 +1,11 @@
+2004-10-19  Helmer Kraemer  <hkraemer@freenet.de>
+
+	* config/arm/sysdepCallMethod.h
+	(sysdepCallMethod) Use f0 only if we're not using
+	soft-float. Fixes ICE in gcc.
+
+	Reported by:  Jari Korva <jpkorva@iki.fi>
+
 2004-10-18  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/java/text/RuleBasedCollator.java:
